--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
   "private": true,
-  "displayName": "Plugin Name",
-  "name": "homebridge-plugin-name",
+  "displayName": "Thermostat",
+  "name": "homebridge-thermostat",
   "version": "1.0.0",
   "description": "A short description about what your plugin does.",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "git://github.com/USERNAME/GITHUB_PROJECT_NAME.git"
+    "url": "git://github.com/rukuh/homebridge-thermostat.git"
   },
   "bugs": {
-    "url": "https://github.com/USERNAME/GITHUB_PROJECT_NAME/issues"
+    "url": "https://github.com/rukuh/homebridge-thermostat/issues"
   },
   "engines": {
     "node": ">=10.17.0",
     "homebridge": ">=1.3.0"
   },
-  "main": "dist/index.js",
+  "main": "dist/thermostat.js",
   "scripts": {
     "lint": "eslint src/**.ts --max-warnings=0",
     "watch": "npm run build && npm link && nodemon",
@@ -26,7 +26,6 @@
   "keywords": [
     "homebridge-plugin"
   ],
-  "dependencies": {},
   "devDependencies": {
     "@types/node": "^14.14.31",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
@@ -37,5 +36,10 @@
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.2"
+  },
+  "dependencies": {
+    "ds18b20": "^0.1.0",
+    "redis": "^3.1.2",
+    "rpi-gpio": "^2.1.7"
   }
 }
