--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
   },
   "dependencies": {
     "ds18b20": "^0.1.0",
+    "epoll": "^2.0.10",
+    "node-gyp": "^10.1.0",
     "redis": "^3.1.2",
-    "rpi-gpio": "^2.1.7"
+    "rpio": "^2.4.2"
   }
 }
