--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "ds18b20": "^0.1.0",
     "epoll": "^2.0.10",
+    "moment": "^2.30.1",
     "node-gyp": "^10.1.0",
     "redis": "^3.1.2",
     "rpio": "^2.4.2"
