--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "url": "https://github.com/rukuh/homebridge-thermostat/issues"
   },
   "engines": {
-    "node": "^18.20.4",
+    "node": "^18.20.4 || ^20.19.0 || ^22.14.0",
     "homebridge": "^1.8.0 || ^2.0.0-beta.0"
   },
   "main": "dist/index.js",
