--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "node-gyp": "^10.1.0",
     "redis": "^4.7.0",
     "request": "^2.88.2",
-    "rpio": "^2.4.2"
+    "rpio": "^2.4.2",
+    "uuid": "^11.1.0"
   }
 }
