--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "ds18b20": "^0.1.0",
     "epoll": "^2.0.10",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "node-gyp": "^10.1.0",
     "redis": "^4.7.0",
